minor formatting to adjust size of nav bar for better display on nery small screen and add home iconto avoid over-spilling text

--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ button:hover {
   margin: 2 rem;
   padding: 2 rem;
   display: grid;
-  grid-template-columns: 25% 10% 40% 25%;
+  grid-template-columns: 23% 15% 39% 23%;
 }
 
 /* parchment style background to test 
